k8s1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    client: internal
    version: 1.0.0
    environtment: dev
  annotations:
      description: Kackend Deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend-pod
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: backend-img
          ports:
            - containerPort: 5000
