k8s1/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    client: internal
    version: 1.0.0
    environtment: dev
  annotations:
    description: Simple backend service
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 5000
  selector:
    app: backend
    tier: t1
